[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pinecone>=5.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.2.1",
    "pyreadline3>=3.5.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.7.0",
    "streamlit==1.30.0",
]
